--- a/public/contact.html
+++ b/public/contact.html
@@ -268,7 +268,17 @@
         </form>
       </div>
     </section>
-    <p class="copyright" style="color: white; text-align: center; margin-top:25vh ; margin-bottom: 15vh;">Copyright 2020 Hemagna Rao</p>
+    <p
+      class="copyright"
+      style="
+        color: white;
+        text-align: center;
+        margin-top: 25vh;
+        margin-bottom: 15vh;
+      "
+    >
+      Copyright 2020 Hemagna Rao
+    </p>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/7.24.0/firebase-app.js"></script>
 
