--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar">
       <ul class="navbar-nav">
         <li class="logo">
-          <a href="#" class="nav-link">
+          <a href="./index.html" class="nav-link">
             <span class="link-text logo-text">Hemagna</span>
             <svg
               aria-hidden="true"
@@ -50,7 +50,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="./index.html" class="nav-link">
             <svg
               aria-hidden="true"
               focusable="false"
@@ -137,7 +137,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="./contact.html" class="nav-link">
             <svg
               aria-hidden="true"
               focusable="false"
