uh added warning alert

--- a/public/about.html
+++ b/public/about.html
@@ -14,6 +14,11 @@
       rel="icon"
       type="image/x-icon"
     />
+    <style>
+        body {
+            color: white;
+        }
+    </style>
   </head>
   <body>
     <nav class="navbar">
@@ -99,9 +104,7 @@
                 ></path>
               </g>
             </svg>
-            <span class="link-text"
-              ><b><u>Portfolio</u></b>
-            </span>
+            <span class="link-text">Portfolio </span>
           </a>
         </li>
         <li class="nav-item">
@@ -130,7 +133,9 @@
                 ></path>
               </g>
             </svg>
-            <span class="link-text">About </span>
+            <span class="link-text"
+              ><b><u> About </u></b>
+            </span>
           </a>
         </li>
         <li class="nav-item">
@@ -166,18 +171,51 @@
     <div id="bg" style="z-index: -1">
       <img src="./images/bg1.jpg" alt="" />
     </div>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/7.24.0/firebase-app.js"></script>
+    <div style="text-align: center;">
+        <img
+        src="./images/pencil.svg"
+        alt="my pic"
+        width="20%"
+        style="margin-top: 15vh; text-align: center; overflow: none;"
+        class="mypic"
+      />
+    </div>
+   
+<h2 class="myH2" >
+    About Me 
+</h2>
+<br />
+<div style="text-align: center">
+  <img
+    src="./images/ic_personal_video_48px.svg"
+    alt="computer"
+    style="text-align: center"
+  />
+</div>
+    <p>
+        Hello welcome to my website, I am a web developer who has a passion to code. I started coding,  over 3 years ago. Though I was not really serious about it until 10 months ago. My dad had bought me a course on web development, and I've made some good stuff, if I would say so myself. Just look at this website, all of the coding and designing was done by me. Pretty good huh?
 
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-      https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="/__/firebase/7.24.0/firebase-analytics.js"></script>
+Though I have other hobbies, I play Minecraft, it is my favorite game in the whole entire world! And let me tell you, this is a pretty big world, around 4 million miles. I've been playing it for almost 3 years now, and I still love it.
 
-    <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="js/index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+I also spend my free time doing other things, other than all the things I mentioned I pretty much just watch Youtube videos and Netflix. My top 2 favorite shows on Netflix are Trollhunters: Tales of Arcadia and The Flash. You should check them out since I heard people have gotten bored lately, so there, 2 shows to watch if you have not already.
+
+Want to know more about me? Why don't we talk, you can either visit my personal contacts page, or my professional contacts page.
+    </p>
+</section>
+ <!-- The core Firebase JS SDK is always required and must be listed first -->
+ <script src="/__/firebase/7.24.0/firebase-app.js"></script>
+
+ <!-- TODO: Add SDKs for Firebase products that you want to use
+  https://firebase.google.com/docs/web/setup#available-libraries -->
+ <script src="/__/firebase/7.24.0/firebase-analytics.js"></script>
+
+ <!-- Initialize Firebase -->
+ <script src="/__/firebase/init.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+ <script src="js/index.js"></script>
+ <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+ 
+ 
   </body>
 </html>
