--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       rel="icon"
       type="image/x-icon"
     />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   </head>
   <body>
     <nav class="navbar">
@@ -80,7 +81,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="./portfolio.html" class="nav-link">
             <svg
               aria-hidden="true"
               focusable="false"
@@ -108,7 +109,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="./about.html" class="nav-link">
             <svg
               aria-hidden="true"
               focusable="false"
@@ -214,5 +215,7 @@
     <script src="js/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="./js/alert.js"></script>
   </body>
 </html>
