--- a/public/404.html
+++ b/public/404.html
@@ -1161,14 +1161,14 @@
                 <linearGradient
                   id="paint13_linear"
                   x1="568.688"
-                  y1="209.407"  
-                  x2="569.018"  
-                  y2="182.751"  
-                  gradientUnits="userSpaceOnUse"    
-                >   
-                  <stop stop-color="#FECBA6" /> 
-                  <stop offset="1" stop-color="#D17878" />  
-                </linearGradient>   
+                  y1="209.407"
+                  x2="569.018"
+                  y2="182.751"
+                  gradientUnits="userSpaceOnUse"
+                >
+                  <stop stop-color="#FECBA6" />
+                  <stop offset="1" stop-color="#D17878" />
+                </linearGradient>
                 <linearGradient
                   id="paint14_linear"
                   x1="552.343"
@@ -1250,4 +1250,8 @@
       });
     </script>
   </body>
+  <script src="./js/alert.js"></script>
+  <script>
+    localStorage.setItem("alerted", "yes");
+  </script>
 </html>
