--- a/public/about.html
+++ b/public/about.html
@@ -80,7 +80,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="./portfolio.html" class="nav-link">
+          <a href="./beta/portfolio.html" class="nav-link">
             <svg
               aria-hidden="true"
               focusable="false"
@@ -192,15 +192,46 @@
     style="text-align: center"
   />
 </div>
-    <p>
-        Hello welcome to my website, I am a web developer who has a passion to code. I started coding,  over 3 years ago. Though I was not really serious about it until 10 months ago. My dad had bought me a course on web development, and I've made some good stuff, if I would say so myself. Just look at this website, all of the coding and designing was done by me. Pretty good huh?
+<style>
+    #about-me {
+	padding: 5% 25%;
+	padding-top: 15%;
+	margin-top: -5%;
+	text-align: center
+}
 
-Though I have other hobbies, I play Minecraft, it is my favorite game in the whole entire world! And let me tell you, this is a pretty big world, around 4 million miles. I've been playing it for almost 3 years now, and I still love it.
+.about-me {
+	font-size: 1.25rem;
+	margin-bottom: .5%
+}
 
-I also spend my free time doing other things, other than all the things I mentioned I pretty much just watch Youtube videos and Netflix. My top 2 favorite shows on Netflix are Trollhunters: Tales of Arcadia and The Flash. You should check them out since I heard people have gotten bored lately, so there, 2 shows to watch if you have not already.
+.about-me-left {
+	text-align: left
+}
 
-Want to know more about me? Why don't we talk, you can either visit my personal contacts page, or my professional contacts page.
-    </p>
+.about-me-right {
+	text-align: right
+}
+</style>
+    <div style="text-align: center;">
+        
+        <p class="myP">I am a web
+            developer who has a passion to code. I started coding, (though it was block coding,) over 3 years ago.
+            Though I was not really serious about it until 10 months ago. My dad had bought me <a
+                href="https://www.udemy.com/course/the-complete-web-development-bootcamp" class="about-me-links">a
+                course on web development</a>, and <a href="./beta/portfolio.html" class="about-me-links">I've made some good
+                stuff,</a> if I would say so myself. Just look at this website, all of the coding and designing was
+            done by me. Pretty good huh?</p>
+    </div>
+
+
+        <div class="col-lg-6"></div>
+
+        <div class="col-lg-6"></div>
+
+      
+</div>
+
 </section>
  <!-- The core Firebase JS SDK is always required and must be listed first -->
  <script src="/__/firebase/7.24.0/firebase-app.js"></script>
@@ -215,7 +246,10 @@ Want to know more about me? Why don't we talk, you can either visit my personal 
  <script src="js/index.js"></script>
  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
- 
+ <script src="./js/alert.js"></script>
+ <script>
+   localStorage.setItem("alerted", "yes");
+ </script>
  
   </body>
 </html>
