--- a/public/contact.html
+++ b/public/contact.html
@@ -78,7 +78,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="./beta/portfolio.html" class="nav-link">
             <svg
               aria-hidden="true"
               focusable="false"
@@ -106,7 +106,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="./about.html" class="nav-link">
             <svg
               aria-hidden="true"
               focusable="false"
@@ -295,6 +295,9 @@
     <script src="js/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-    
+    <script src="./js/alert.js"></script>
+    <script>
+      localStorage.setItem("alerted", "yes");
+    </script>
   </body>
 </html>
