--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="./portfolio.html" class="nav-link">
+          <a href="./beta/portfolio.html" class="nav-link">
             <svg
               aria-hidden="true"
               focusable="false"
@@ -173,7 +173,7 @@
       </div>
       <div style="text-align: center">
         <img
-          src="./images/mypic.png"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRr3qBVX4XIA8zq3LpBn64zAuOt9_IZ7_H5uA&usqp=CAU"
           alt="my pic"
           width="20%"
           style="margin-top: 15vh"
@@ -217,5 +217,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="./js/alert.js"></script>
+    <script>
+      localStorage.setItem("alerted", "yes");
+    </script>
   </body>
 </html>
