--- a/public/beta/portfolio.html
+++ b/public/beta/portfolio.html
@@ -145,7 +145,7 @@
                 class="fa-primary"></path>
             </g>
           </svg>
-          <span class="link-text"><b> <u>Contact me</u> </b>
+          <span class="link-text">Contact me
           </span>
         </a>
       </li>
