--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@
       </div>
       <div style="text-align: center">
         <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRr3qBVX4XIA8zq3LpBn64zAuOt9_IZ7_H5uA&usqp=CAU"
+          src="./images/mypic.webp"
           alt="my pic"
           width="20%"
           style="margin-top: 15vh"
