--- a/public/404.html
+++ b/public/404.html
@@ -53,7 +53,7 @@
     </style>
   </head>
   <body>
-    <a href="index.html" target="_blank"
+    <a href="/public/index.html" target="_blank"
       ><div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 mt-5 mb-5">
