--- a/public/beta/portfolio.html
+++ b/public/beta/portfolio.html
@@ -11,13 +11,11 @@
     rel="icon" type="image/x-icon" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <style>
-    /*HI */
     body {
       text-align: center;
     }
 
 
-    /*resources page style*/
 
     .card {
       border: 3px solid rgb(0 0 0);
@@ -178,7 +176,7 @@
     <script>
       Swal.fire(
         "Warning!",
-        "This site is in beta, so you may see some funky incomplete styling",
+        "This site is in alpha, so you may see some funky incomplete styling",
         "warning"
       );
     </script>
