--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,16 @@
       content="This is my (Hemagna Rao's) Personal site! You can know more about me here!
   "
     />
+    
+    <meta property="og:title" content="Hemagna Rao, A Developer" />
+    <meta property="og:url" content="https://hemagnarao.web.app/" />
+    <meta property="og:type" content="website" />
+
+
     <meta
       property="og:description"
       content="This is my (Hemagna Rao's) Personal site! You can know more about me here!"
-    />
+    />  
     <meta property="og:determiner" content="the" />
     <meta property="og:locale" content="en_IN" />
     <meta property="og:locale:alternate" content="en_US" />
