--- a/public/index.html
+++ b/public/index.html
@@ -21,32 +21,35 @@
       content="This is my (Hemagna Rao's) Personal site! You can know more about me here!
   "
     />
-    
+
     <meta property="og:title" content="Hemagna Rao, A Developer" />
     <meta property="og:url" content="https://hemagnarao.web.app/" />
     <meta property="og:type" content="website" />
 
-
     <meta
       property="og:description"
       content="This is my (Hemagna Rao's) Personal site! You can know more about me here!"
-    />  
+    />
     <meta property="og:determiner" content="the" />
     <meta property="og:locale" content="en_IN" />
     <meta property="og:locale:alternate" content="en_US" />
     <meta property="og:locale:alternate" content="en_GB" />
-    <meta property="og:site_name" content="Hemagna" />
-    <meta property="og:image" content="https://hemagnarao.web.app/images/mypic.webp" />
+    <meta property="og:site_name" content="Hemagna Rao" />
+    <meta
+      property="og:image"
+      content="https://hemagnarao.web.app/images/mypic.webp"
+    />
+    <meta property="og:image:width" content="289" />
+    <meta property="og:image:height" content="289" />
     <meta
       property="og:image:secure_url"
       content="https://hemagnarao.web.app/images/mypic.webp"
     />
+    <meta property="og:image:width" content="289" />
+    <meta property="og:image:height" content="289" />
     <meta property="og:image:type" content="image/webp" />
 
-    <meta
-      property="og:image:alt"
-      content="A shiny red apple with a bite taken out"
-    />
+    <meta property="og:image:alt" content="My Picture" />
   </head>
 
   <body>
