--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
     <meta property="og:image:width" content="289" />
     <meta property="og:image:height" content="289" />
     <meta property="og:image:type" content="image/webp" />
+    <meta name="google-site-verification" content="IdPpkfLigIph7Min2tA3MgxsYOfa8o-PVN-81snBhqM" />
   </head>
 
   <body>
