--- a/public/beta/portfolio.html
+++ b/public/beta/portfolio.html
@@ -54,9 +54,11 @@
       <li class="logo">
         <a href="../index.html" class="nav-link">
           <span class="link-text logo-text">Hemagna</span>
-          <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="angle-double-right" role="img"
+          <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="angle-double-right" role="img"                         style="border: 3px solid;"
+
             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
             class="svg-inline--fa fa-angle-double-right fa-w-14 fa-5x">
+
             <g class="fa-group">
               <path fill="currentColor"
                 d="M224 273L88.37 409a23.78 23.78 0 0 1-33.8 0L32 386.36a23.94 23.94 0 0 1 0-33.89l96.13-96.37L32 159.73a23.94 23.94 0 0 1 0-33.89l22.44-22.79a23.78 23.78 0 0 1 33.8 0L223.88 239a23.94 23.94 0 0 1 .1 34z"
