--- a/public/contact.html
+++ b/public/contact.html
@@ -6,10 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    />
+
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Contact Me</title>
     <link
@@ -25,6 +22,7 @@
           <a href="./index.html" class="nav-link">
             <span class="link-text logo-text">Hemagna</span>
             <svg
+              style="border: 3px solid"
               aria-hidden="true"
               focusable="false"
               data-prefix="fad"
@@ -281,11 +279,7 @@
 
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="js/index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./js/alert.js"></script>
+    <script src="./js/jquery.min.js" defer></script>
     <script>
       localStorage.setItem("alerted", "yes");
     </script>
