--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
                 ></path>
               </g>
             </svg>
-            <span class="link-text"> Home </span>
+            <span class="link-text"> <u><b>Home</b></u>  </span>
           </a>
         </li>
         <li class="nav-item">
@@ -202,7 +202,7 @@
               </g>
             </svg>
             <span class="link-text"
-              ><b> <u>Contact me</u> </b>
+              >Contact me
             </span>
           </a>
         </li>
