--- a/public/about.html
+++ b/public/about.html
@@ -140,16 +140,9 @@
   </div>
   </div>
   </section>
-  <script src="/__/firebase/7.24.0/firebase-app.js"></script>
 
-  <script src="/__/firebase/7.24.0/firebase-analytics.js"></script>
-  <script src="/__/firebase/8.0.0/firebase-performance.js"></script>
-  <script src="/__/firebase/init.js"></script>
-  <script src="js/index.js"></script>
-  <script src="./js/jquery.min.js"></script>
-  <script>
-    localStorage.setItem("alerted", "yes");
-  </script>
+  <script src="./js/jquery.min.js" defer></script>
+ 
 </body>
 
 </html>
