--- a/public/about.html
+++ b/public/about.html
@@ -13,10 +13,12 @@
     body {
       color: white;
     }
+
     a {
       color: #ffffff;
-      text-emphasis:italic;
+      text-emphasis: italic;
     }
+
     a:hover {
       color: blue;
     }
@@ -29,9 +31,8 @@
       <li class="logo">
         <a href="./index.html" class="nav-link">
           <span class="link-text logo-text">Hemagna</span>
-          <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="angle-double-right" role="img"             style="border: 3px solid;"
-
-            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
+          <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="angle-double-right" role="img"
+            style="border: 3px solid;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
             class="svg-inline--fa fa-angle-double-right fa-w-14 fa-5x">
             <g class="fa-group">
               <path fill="currentColor"
@@ -135,14 +136,14 @@
         course on web development</a>, and <a href="./beta/portfolio.html" class="about-me-links">I've made some good
         stuff,</a> if I would say so myself. Just look at this website, all of the coding and designing was
       done by me. Pretty good huh?
-      
+
     </p>
   </div>
   </div>
   </section>
 
   <script src="./js/jquery.min.js" defer></script>
- 
+
 </body>
 
 </html>
