--- a/public/beta/portfolio.html
+++ b/public/beta/portfolio.html
@@ -54,9 +54,8 @@
       <li class="logo">
         <a href="../index.html" class="nav-link">
           <span class="link-text logo-text">Hemagna</span>
-          <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="angle-double-right" role="img"                         style="border: 3px solid;"
-
-            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
+          <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="angle-double-right" role="img"
+            style="border: 3px solid;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
             class="svg-inline--fa fa-angle-double-right fa-w-14 fa-5x">
 
             <g class="fa-group">
