--- a/public/about.html
+++ b/public/about.html
@@ -114,7 +114,7 @@
     </ul>
   </nav>
   <div id="bg" style="z-index: -1">
-    <img src="./images/bg1.jpg" alt="" />
+    <img src="./images/bg1.webp" alt="" />
   </div>
   <div style="text-align: center;">
     <img src="./images/pencil.svg" alt="my pic" width="20%"
