--- a/public/beta/portfolio.html
+++ b/public/beta/portfolio.html
@@ -144,24 +144,24 @@
     </ul>
   </nav>
   <div id="bg" style="z-index: -1">
-    <img src="../images/bg1.jpg" alt="" />
+    <img src="../images/bg1.webp" alt="" />
   </div>
   <div class="resources">
     <div class="row">
       <div class="card col-lg-3 col-md-4 col-sm-6">
-        <img src="../images/tindog.jpg" height="100vh" alt="">
+        <img src="../images/tindog.webp" height="100vh" alt="">
         <div class="card-body">
           <p class="card-text"><a target="_blank" href="https://tindog123455.netlify.app/">TinDog</a></p>
         </div>
       </div>
       <div class="card col-lg-3 col-md-4 col-sm-6">
-        <img src="../images/websters.jpg" alt="" height="100vh">
+        <img src="../images/websters.webp" alt="" height="100vh">
         <div class="card-body">
           <p class="card-text"><a target="_blank" href="https://webstersweb.netlify.app/">Websters Resources</a></p>
         </div>
       </div>
       <div class="card col-lg-3 col-md-4 col-sm-6">
-        <img class="card-img-top" src="../images/personal.jpg" alt="" height="100vh">
+        <img class="card-img-top" src="../images/personal.webp" alt="" height="100vh">
         <div class="card-body">
           <p class="card-text"><a target="_blank" href="https://hemagnarao.web.app">My personal website</a></p>
         </div>
