--- a/public/contact.html
+++ b/public/contact.html
@@ -102,10 +102,10 @@
   </nav>
   <section class="home">
     <div id="bg" style="z-index: -1">
-      <img src="./images/bg1.jpg" alt="" />
+      <img src="./images/bg1.webp" alt="" />
     </div>
     <div style="text-align: center">
-      <img src="./images/contact.png" alt="my pic" width="20%" style="margin-top: 15vh" class="mypic" />
+      <img src="./images/contact.webp" alt="my pic" width="20%" style="margin-top: 15vh" class="mypic" />
     </div>
     <h2 class="myH2">
       <b style="color: turquoise">Contact Me</b>
@@ -114,15 +114,18 @@
     <div style="text-align: center">
       <img src="./images/chat-46.svg" alt="computer" style="text-align: center; color: white" />
     </div>
-    <div style="text-align: center; overflow: none">
+    <div style="text-align: center;">
       <iframe style="
             text-align: center;
-            overflow: none;
+            overflow: hidden;
             color: white;
-            background-image: url(./images/bg1.jpg);
+            background-image: url(./images/bg1.webp);
+            height: 70vh;
+            width: 50vw;
+
           "
         src="https://docs.google.com/forms/d/e/1FAIpQLScMPW0obL8YDy1w0NamOq6mhU9pCfDH2nXH5Q3cMPmDoffgUw/viewform?embedded=true"
-        width="640" height="705" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        width="100vw" height="100vh" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
   </section>
 
