--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
   </nav>
   <section class="home">
     <div id="bg" style="z-index: -1">
-      <img src="./images/bg1.jpg" alt="" />
+      <img src="./images/bg1.webp" alt="" />
     </div>
     <div style="text-align: center">
       <img src="./images/mypic.webp" alt="my pic" width="20%" style="margin-top: 15vh" class="mypic" />
@@ -199,7 +199,7 @@
     <script src="/__/firebase/7.24.0/firebase-app.js" defer></script>
     <script src="/__/firebase/7.24.0/firebase-analytics.js" defer></script>
     <script src="/__/firebase/init.js" defer></script>
-    <script>
+    <script> 
       if (screen.width < 426) {
         document.getElementById("direction").innerHTML = " bottom ";
       }
