--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,8 @@
   <meta property="og:image:height" content="289" />
   <meta property="og:image:type" content="image/webp" />
   <meta name="google-site-verification" content="IdPpkfLigIph7Min2tA3MgxsYOfa8o-PVN-81snBhqM" />
-  <link rel="canonical" href="https://hemagnarao.web.app/">
+  <meta name="ahrefs-site-verification" content="2f129e8da5ecf80afbc086229579edea64f31c5de0da98a6052b30b648a13589">
+  <link rel="canonical" href="https://hemagna.ga/">
 </head>
 
 <body>
@@ -199,7 +200,7 @@
     <script src="/__/firebase/7.24.0/firebase-app.js" defer></script>
     <script src="/__/firebase/7.24.0/firebase-analytics.js" defer></script>
     <script src="/__/firebase/init.js" defer></script>
-    <script> 
+    <script>
       if (screen.width < 426) {
         document.getElementById("direction").innerHTML = " bottom ";
       }
