--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   <script src="./js/jquery.min.js" defer></script>
   <meta name="description" content="This is my (Hemagna Rao's) Personal site! You can know more about me here!
     " />
+  <meta name="wot-verification" content="26ba6ef3de8ff385877c"/>
+
+
 
   <meta property="og:title" content="Hemagna Rao, A Developer" />
   <meta property="og:url" content="https://hemagnarao.web.app/" />
