--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
   <meta name="description" content="This is my (Hemagna Rao's) Personal site! You can know more about me here!
     " />
   <meta name="wot-verification" content="26ba6ef3de8ff385877c"/>
+  <meta name="yandex-verification" content="f38c060d046e8527" />
+
 
 
 
