--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     " />
   <meta name="wot-verification" content="26ba6ef3de8ff385877c"/>
   <meta name="yandex-verification" content="f38c060d046e8527" />
-
+  <meta name="google-site-verification" content="aa9DhLdL1O8LsqAlG_UTLeKLxstQClZ_TjLNErVO5Mg" />
 
 
 
