--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,7 @@
       </h6>
   </section>
   <h5 style="text-align: center; color: #f0f8ff" class="copyright">
-    © 2020 Hemagna Rao | all rights reserved
+    Copyleft 🄯 Hemagna Rao 2021-2022
     </p>
     <script src="/__/firebase/7.24.0/firebase-app.js" defer></script>
     <script src="/__/firebase/7.24.0/firebase-analytics.js" defer></script>
