--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
   <link rel="stylesheet" href="./css/styles.css" />
   <title>Hemagna Rao</title>
-  <link href="./images/mypic.webp" rel="icon" type="image/x-icon" />
+  <link href="./images/mypic.jpg" rel="icon" type="image/x-icon" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="./js/jquery.min.js" defer></script>
   <meta name="description" content="This is my (Hemagna Rao's) Personal site! You can know more about me here!
